# Trading-Agents-Web-Front-End

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.web  LICENSE  README.md  REFACTOR_PLAN.md  SECURITY_AUDIT.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  docker.yml  release.yml
cli/: utils.py
deploy/cleo/: README.md  cleo.env.example  cleo.service
docs/history/: REFACTOR_PLAN_R2.md
scripts/: cleo_llm_handler.py  redeploy.py  render_stack_payload.py
tests/: test_alerts.py  test_brokerages.py  test_bus_bridge.py  test_bus_client.py  test_bus_mirror.py  test_clear_history.py  test_cleo_handler.py  test_dependency_health.py  test_login_rate_limit.py  test_memory_log.py  test_ollama_base_url.py  test_options_allocator.py  test_options_data.py  test_options_lifecycle.py  test_outcome_resolution.py  test_per_role_provider.py  test_portfolio_progress.py  test_readme.py  test_scan_health_guard.py  test_switchboard_orchestrator.py  test_ticker_search.py
tradingagents/: constants.py  default_config.py  llm_router.py
tradingagents/agents/managers/: portfolio_manager.py
tradingagents/agents/utils/: agent_utils.py  calibration.py  memory.py  scoring.py  structured.py
tradingagents/dataflows/: alpha_vantage_common.py  alpha_vantage_indicator.py  schwab_mcp.py  stockstats_utils.py  stocktwits.py  utils.py  y_finance.py
tradingagents/graph/: outcome_resolution.py  portfolio_graph.py  reflection.py  trading_graph.py
tradingagents/llm_clients/: defaults.py  factory.py  model_catalog.py  openai_client.py  switchboard_client.py
tradingagents/orchestrator/: __init__.py  switchboard_orchestrator.py
web/: _logging.py  alerts.py  auth_app.py  brokerages.py  bus.py  bus_mirror.py  credentials.py  db.py  llm_helpers.py  main.py  newsletter.py  nginx.conf  notifier.py  options_allocator.py  options_data.py  options_engine.py  portfolio_main.py  providers.py  runner.py  scheduler.py  secret_box.py  spy_allocator.py  spy_scanner.py  spy_tickers.py
web/auth/: schwab.py  schwab_client.py  token_store.py
web/portfolio/: aggregator.py
web/static/: app.js  auth.js  bus.js  credentials.js  index.html  options.js  portfolio.js  schwab.js  spy.js  styles.css  utils.js
web/templates/: newsletter.html
