[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.2.6"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
    # Schwab/portfolio/newsletter stack additions (used by web + scheduler containers)
    "cryptography>=43.0",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "jinja2>=3.1",
    "markdown>=3.6",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "python-multipart>=0.0.9",
]

[project.scripts]
tradingagents = "cli.main:app"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*", "web*"]

[tool.setuptools.package-data]
cli = ["static/*"]
web = ["static/*", "templates/*"]

# Ruff is the project's linter/formatter. The repo had no linter before, so a
# repo-wide cleanup is intentionally incremental: this config defines the target
# standard, and modules are brought into compliance as they are touched. Run
# `ruff check .` to see the remaining backlog; `ruff check <path>` for one module.
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# F = pyflakes (unused imports/vars, undefined names)
# I = isort (import ordering)   UP = pyupgrade (modern syntax)   B = flake8-bugbear
select = ["F", "I", "UP", "B"]
ignore = [
    "B008",  # function call in default arg — idiomatic for FastAPI's Depends()/Query()
]

[tool.ruff.lint.per-file-ignores]
# A few modules deliberately re-export via `from x import *`; don't flag the
# resulting star-import warnings there.
"cli/main.py" = ["F403", "F405"]
"tradingagents/graph/setup.py" = ["F403", "F405"]
"tradingagents/graph/trading_graph.py" = ["F403", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["tradingagents", "web", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
